--- a/coursework_02/coursework_02.ipynb
+++ b/coursework_02/coursework_02.ipynb
@@ -2,9 +2,6 @@
  "cells": [
   {
    "cell_type": "markdown",
-   "metadata": {
-    "id": "6XRxHiKdGHiT"
-   },
    "source": [
     "# Coursework 2: Image segmentation\n",
     "\n",
@@ -38,15 +35,14 @@
     "The coursework is developed to be able to run on CPU, as all images have been pre-processed to be 2D and of a smaller size, compared to original 3D volumes.\n",
     "\n",
     "However, to save training time, you may want to use GPU. In that case, you can run this notebook on Google Colab. On Google Colab, go to the menu, Runtime - Change runtime type, and select **GPU** as the hardware acceleartor. At the end, please still export everything and submit as a PDF file on Scientia.\n"
-   ]
+   ],
+   "metadata": {
+    "id": "6XRxHiKdGHiT"
+   }
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {
-    "id": "Eq1KWmR3HWYV"
-   },
-   "outputs": [],
    "source": [
     "# Import libraries\n",
     "# These libraries should be sufficient for this tutorial.\n",
@@ -64,13 +60,14 @@
     "import random\n",
     "import matplotlib.pyplot as plt\n",
     "from matplotlib import colors"
-   ]
+   ],
+   "outputs": [],
+   "metadata": {
+    "id": "Eq1KWmR3HWYV"
+   }
   },
   {
    "cell_type": "markdown",
-   "metadata": {
-    "id": "w4TX-CXBHW4c"
-   },
    "source": [
     "## 1. Download and visualise the imaging dataset.\n",
     "\n",
@@ -82,15 +79,14 @@
     "- 1: edema\n",
     "- 2: non-enhancing tumour\n",
     "- 3: enhancing tumour"
-   ]
+   ],
+   "metadata": {
+    "id": "w4TX-CXBHW4c"
+   }
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {
-    "id": "mt93oQ8xZkE9"
-   },
-   "outputs": [],
    "source": [
     "# Download the dataset\n",
     "!wget https://www.dropbox.com/s/zmytk2yu284af6t/Task01_BrainTumour_2D.tar.gz\n",
@@ -99,13 +95,14 @@
     "datafile = tarfile.open('Task01_BrainTumour_2D.tar.gz')\n",
     "datafile.extractall()\n",
     "datafile.close()"
-   ]
+   ],
+   "outputs": [],
+   "metadata": {
+    "id": "mt93oQ8xZkE9"
+   }
   },
   {
    "cell_type": "markdown",
-   "metadata": {
-    "id": "vu_BTL0x6o5a"
-   },
    "source": [
     "## Visualise a random set of 4 training images along with their label maps.\n",
     "\n",
@@ -118,39 +115,53 @@
     "```\n",
     "cmap = colors.ListedColormap(['black', 'green', 'blue', 'red'])\n",
     "```"
-   ]
+   ],
+   "metadata": {
+    "id": "vu_BTL0x6o5a"
+   }
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {
-    "id": "3fgubCRC6m4k"
-   },
-   "outputs": [],
    "source": [
     "### Insert your code ###\n",
-    "...\n",
+    "\n",
+    "path = \"./Task01_BrainTumour_2D/training_images/\"\n",
+    "training_imgs = os.listdir(path)\n",
+    "sample_imgs = random.sample(training_imgs, 4)\n",
+    "\n",
+    "fig, axs = plt.subplots(2, 4, figsize=(8, 8))\n",
+    "\n",
+    "for i in range(4):\n",
+    "  t_image = imageio.imread(os.path.join(\"./Task01_BrainTumour_2D/training_images/\", sample_imgs[i]))\n",
+    "  t_label = imageio.imread(os.path.join(\"./Task01_BrainTumour_2D/training_labels/\", sample_imgs[i]))\n",
+    "\n",
+    "  axs[0,i].imshow(t_image, cmap=\"gray\")\n",
+    "  axs[1,i].imshow(t_label, cmap=colors.ListedColormap([\"black\", \"green\", \"blue\", \"red\"]))\n",
+    "\n",
+    "plt.tight_layout()\n",
+    "\n",
     "### End of your code ###"
-   ]
+   ],
+   "outputs": [],
+   "metadata": {
+    "id": "3fgubCRC6m4k"
+   }
   },
   {
    "cell_type": "markdown",
-   "metadata": {
-    "id": "5xWGT3KaML-D"
-   },
    "source": [
     "## 2. Implement a dataset class.\n",
     "\n",
     "It can read the imaging dataset and get items, pairs of images and label maps, as training batches."
-   ]
+   ],
+   "metadata": {
+    "id": "5xWGT3KaML-D"
+   }
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {
-    "id": "6p6wFZ3na5z9"
-   },
-   "outputs": [],
    "source": [
     "def normalise_intensity(image, thres_roi=1.0):\n",
     "    \"\"\" Normalise the image intensity by the mean and standard deviation \"\"\"\n",
@@ -206,13 +217,14 @@
     "        ...\n",
     "        ### End of your code ###\n",
     "        return images, labels"
-   ]
+   ],
+   "outputs": [],
+   "metadata": {
+    "id": "6p6wFZ3na5z9"
+   }
   },
   {
    "cell_type": "markdown",
-   "metadata": {
-    "id": "pa4ZpawDNmwu"
-   },
    "source": [
     "## 3. Build a U-net architecture.\n",
     "\n",
@@ -221,15 +233,14 @@
     "[1] Olaf Ronneberger et al. [U-Net: Convolutional networks for biomedical image segmentation](https://link.springer.com/chapter/10.1007/978-3-319-24574-4_28). MICCAI, 2015.\n",
     "\n",
     "For the first convolutional layer, you can start with 16 filters. We have implemented the encoder path. Please complete the decoder path."
-   ]
+   ],
+   "metadata": {
+    "id": "pa4ZpawDNmwu"
+   }
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {
-    "id": "IMPmBZVGb1aI"
-   },
-   "outputs": [],
    "source": [
     "\"\"\" U-net \"\"\"\n",
     "class UNet(nn.Module):\n",
@@ -307,24 +318,24 @@
     "        ...\n",
     "        ### End of your code ###\n",
     "        return x"
-   ]
+   ],
+   "outputs": [],
+   "metadata": {
+    "id": "IMPmBZVGb1aI"
+   }
   },
   {
    "cell_type": "markdown",
-   "metadata": {
-    "id": "NcNWZS08d47P"
-   },
    "source": [
     "## 4. Train the segmentation model."
-   ]
+   ],
+   "metadata": {
+    "id": "NcNWZS08d47P"
+   }
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {
-    "id": "xaGGkKQndIaR"
-   },
-   "outputs": [],
    "source": [
     "# CUDA device\n",
     "device = torch.device('cuda' if torch.cuda.is_available() else 'cpu')\n",
@@ -386,49 +397,53 @@
     "    if it % 5000 == 0:\n",
     "        torch.save(model.state_dict(), os.path.join(model_dir, 'model_{0}.pt'.format(it)))\n",
     "print('Training took {:.3f}s in total.'.format(time.time() - start))"
-   ]
+   ],
+   "outputs": [],
+   "metadata": {
+    "id": "xaGGkKQndIaR"
+   }
   },
   {
    "cell_type": "markdown",
-   "metadata": {
-    "id": "89yjxjGyb6yT"
-   },
    "source": [
     "## 5. Deploy the trained model to a random set of 4 test images and visualise the automated segmentation.\n",
     "\n",
     "You can show the images as a 4 x 3 panel. Each row shows one example, with the 3 columns being the test image, automated segmentation and ground truth segmentation."
-   ]
+   ],
+   "metadata": {
+    "id": "89yjxjGyb6yT"
+   }
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {
-    "id": "wZeLE0qZjd2j"
-   },
-   "outputs": [],
    "source": [
     "### Insert your code ###\n",
     "...\n",
     "### End of your code ###"
-   ]
+   ],
+   "outputs": [],
+   "metadata": {
+    "id": "wZeLE0qZjd2j"
+   }
   },
   {
    "cell_type": "markdown",
-   "metadata": {
-    "id": "Cj3Qusin_s_r"
-   },
    "source": [
     "## 6. Discussion. Does your trained model work well? How would you improve this model so it can be deployed to the real clinic?"
-   ]
+   ],
+   "metadata": {
+    "id": "Cj3Qusin_s_r"
+   }
   },
   {
    "cell_type": "code",
    "execution_count": null,
+   "source": [],
+   "outputs": [],
    "metadata": {
     "id": "nVwEtDKIdTRs"
-   },
-   "outputs": [],
-   "source": []
+   }
   }
  ],
  "metadata": {
