--- a/coursework_02/coursework_02.ipynb
+++ b/coursework_02/coursework_02.ipynb
@@ -214,7 +214,16 @@
     "        images, labels = [], []\n",
     "\n",
     "        ### Insert your code ###\n",
-    "        ...\n",
+    "    \n",
+    "        nums = range(len(self))\n",
+    "        batch_nums = random.sample(nums, batch_size)\n",
+    "\n",
+    "        for n in batch_nums:\n",
+    "          image, label = self[n]\n",
+    "          image = np.expand_dims(image, axis=0)\n",
+    "          images.append(image)\n",
+    "          labels.append(label)\n",
+    "\n",
     "        ### End of your code ###\n",
     "        return images, labels"
    ],
