Changed plot layout in question 2

--- a/coursework_02/coursework_02.ipynb
+++ b/coursework_02/coursework_02.ipynb
@@ -130,11 +130,11 @@
     "training_imgs = os.listdir(path)\n",
     "sample_imgs = random.sample(training_imgs, 4)\n",
     "\n",
-    "fig, axs = plt.subplots(2, 4, figsize=(8, 8))\n",
+    "fig, axs = plt.subplots(2, 4, figsize=(8, 4))\n",
     "\n",
     "for i in range(4):\n",
-    "  t_image = imageio.imread(os.path.join(\"./Task01_BrainTumour_2D/training_images/\", sample_imgs[i]))\n",
-    "  t_label = imageio.imread(os.path.join(\"./Task01_BrainTumour_2D/training_labels/\", sample_imgs[i]))\n",
+    "  t_image = imageio.v2.imread(os.path.join(\"./Task01_BrainTumour_2D/training_images/\", sample_imgs[i]))\n",
+    "  t_label = imageio.v2.imread(os.path.join(\"./Task01_BrainTumour_2D/training_labels/\", sample_imgs[i]))\n",
     "\n",
     "  axs[0,i].imshow(t_image, cmap=\"gray\")\n",
     "  axs[1,i].imshow(t_label, cmap=colors.ListedColormap([\"black\", \"green\", \"blue\", \"red\"]))\n",
