3: implemented decoder path and built the U-net using the decoder layers and skip connections

--- a/coursework_02/coursework_02.ipynb
+++ b/coursework_02/coursework_02.ipynb
@@ -303,7 +303,47 @@
     "        \n",
     "        # Decoder path\n",
     "        ### Insert your code ###\n",
-    "        ...\n",
+    "        \n",
+    "        # n = 128\n",
+    "        self.trans1 = nn.Sequential(\n",
+    "            nn.ConvTranspose2d(n, int(n / 2), kernel_size=3, stride=2, padding=1),\n",
+    "            nn.BatchNorm2d(int(n / 2)),\n",
+    "            nn.ReLU(),\n",
+    "            nn.Conv2d(int(n / 2), int(n / 2), kernel_size=3, padding=1),\n",
+    "            nn.BatchNorm2d(int(n / 2)),\n",
+    "            nn.ReLU()\n",
+    "        )\n",
+    "\n",
+    "        n //= 2  # 64\n",
+    "        self.trans2 = nn.Sequential(\n",
+    "            nn.ConvTranspose2d(n, int(n / 2), kernel_size=3, stride=2, padding=1),\n",
+    "            nn.BatchNorm2d(int(n / 2)),\n",
+    "            nn.ReLU(),\n",
+    "            nn.Conv2d(int(n / 2), int(n / 2), kernel_size=3, padding=1),\n",
+    "            nn.BatchNorm2d(int(n / 2)),\n",
+    "            nn.ReLU()\n",
+    "        )\n",
+    "        \n",
+    "        n //= 2  # 32\n",
+    "        self.trans3 = nn.Sequential(\n",
+    "            nn.ConvTranspose2d(n, int(n / 2), kernel_size=3, stride=2, padding=1),\n",
+    "            nn.BatchNorm2d(int(n / 2)),\n",
+    "            nn.ReLU(),\n",
+    "            nn.Conv2d(int(n / 2), int(n / 2), kernel_size=3, padding=1),\n",
+    "            nn.BatchNorm2d(int(n / 2)),\n",
+    "            nn.ReLU()\n",
+    "        )\n",
+    "        \n",
+    "        n //= 2  # 16\n",
+    "        self.trans4 = nn.Sequential(\n",
+    "            nn.ConvTranspose2d(n, output_channel, kernel_size=3, padding=1),\n",
+    "            nn.BatchNorm2d(output_channel),\n",
+    "            nn.ReLU(),\n",
+    "            nn.Conv2d(output_channel, output_channel, kernel_size=3, padding=1),\n",
+    "            nn.BatchNorm2d(output_channel),\n",
+    "            nn.ReLU()\n",
+    "        )\n",
+    "\n",
     "        ### End of your code ###\n",
     "\n",
     "    def forward(self, x):\n",
@@ -324,7 +364,19 @@
     "\n",
     "        # Decoder\n",
     "        ### Insert your code ###\n",
-    "        ...\n",
+    "        \n",
+    "        x = self.trans1(x)\n",
+    "\n",
+    "        # concatenate x with conv3_skip, and feed into trans2\n",
+    "        x = torch.cat([x, conv3_skip], dim=1)\n",
+    "        x = self.trans2(x)\n",
+    "\n",
+    "        x = torch.cat([x, conv2_skip], dim=1)\n",
+    "        x = self.trans3(x)\n",
+    "\n",
+    "        x = torch.cat([x, conv1_skip], dim=1)\n",
+    "        x = self.trans4(x)\n",
+    "\n",
     "        ### End of your code ###\n",
     "        return x"
    ],
