Fixed U-Net architecture + added training code

--- a/coursework_02/coursework_02.ipynb
+++ b/coursework_02/coursework_02.ipynb
@@ -224,6 +224,8 @@
     "          images.append(image)\n",
     "          labels.append(label)\n",
     "\n",
+    "        images, labels = np.array(images), np.array(labels)\n",
+    "\n",
     "        ### End of your code ###\n",
     "        return images, labels"
    ],
@@ -304,42 +306,35 @@
     "        # Decoder path\n",
     "        ### Insert your code ###\n",
     "        \n",
-    "        # n = 128\n",
-    "        self.trans1 = nn.Sequential(\n",
-    "            nn.ConvTranspose2d(n, int(n / 2), kernel_size=3, stride=2, padding=1),\n",
-    "            nn.BatchNorm2d(int(n / 2)),\n",
+    "        n //= 2  # 64\n",
+    "        self.trans1 = nn.ConvTranspose2d(n * 2, n, kernel_size=2, stride=2)\n",
+    "        self.decConv1 = nn.Sequential(\n",
+    "            nn.Conv2d(n * 2, n, kernel_size=3, padding=1),\n",
+    "            nn.BatchNorm2d(n),\n",
     "            nn.ReLU(),\n",
-    "            nn.Conv2d(int(n / 2), int(n / 2), kernel_size=3, padding=1),\n",
-    "            nn.BatchNorm2d(int(n / 2)),\n",
+    "            nn.Conv2d(n, n, kernel_size=3, padding=1),\n",
+    "            nn.BatchNorm2d(n),\n",
     "            nn.ReLU()\n",
     "        )\n",
     "\n",
-    "        n //= 2  # 64\n",
-    "        self.trans2 = nn.Sequential(\n",
-    "            nn.ConvTranspose2d(n, int(n / 2), kernel_size=3, stride=2, padding=1),\n",
-    "            nn.BatchNorm2d(int(n / 2)),\n",
-    "            nn.ReLU(),\n",
-    "            nn.Conv2d(int(n / 2), int(n / 2), kernel_size=3, padding=1),\n",
-    "            nn.BatchNorm2d(int(n / 2)),\n",
-    "            nn.ReLU()\n",
-    "        )\n",
-    "        \n",
     "        n //= 2  # 32\n",
-    "        self.trans3 = nn.Sequential(\n",
-    "            nn.ConvTranspose2d(n, int(n / 2), kernel_size=3, stride=2, padding=1),\n",
-    "            nn.BatchNorm2d(int(n / 2)),\n",
+    "        self.trans2 = nn.ConvTranspose2d(n * 2, n, kernel_size=2, stride=2)\n",
+    "        self.decConv2 = nn.Sequential(\n",
+    "            nn.Conv2d(n * 2, n, kernel_size=3, padding=1),\n",
+    "            nn.BatchNorm2d(n),\n",
     "            nn.ReLU(),\n",
-    "            nn.Conv2d(int(n / 2), int(n / 2), kernel_size=3, padding=1),\n",
-    "            nn.BatchNorm2d(int(n / 2)),\n",
+    "            nn.Conv2d(n, n, kernel_size=3, padding=1),\n",
+    "            nn.BatchNorm2d(n),\n",
     "            nn.ReLU()\n",
     "        )\n",
     "        \n",
     "        n //= 2  # 16\n",
-    "        self.trans4 = nn.Sequential(\n",
-    "            nn.ConvTranspose2d(n, output_channel, kernel_size=3, padding=1),\n",
-    "            nn.BatchNorm2d(output_channel),\n",
+    "        self.trans3 = nn.ConvTranspose2d(n * 2, n, kernel_size=2, stride=2)\n",
+    "        self.decConv3 = nn.Sequential(\n",
+    "            nn.Conv2d(n * 2, n, kernel_size=3, padding=1),\n",
+    "            nn.BatchNorm2d(n),\n",
     "            nn.ReLU(),\n",
-    "            nn.Conv2d(output_channel, output_channel, kernel_size=3, padding=1),\n",
+    "            nn.Conv2d(n, output_channel, kernel_size=3, padding=1),\n",
     "            nn.BatchNorm2d(output_channel),\n",
     "            nn.ReLU()\n",
     "        )\n",
@@ -366,16 +361,16 @@
     "        ### Insert your code ###\n",
     "        \n",
     "        x = self.trans1(x)\n",
-    "\n",
-    "        # concatenate x with conv3_skip, and feed into trans2\n",
     "        x = torch.cat([x, conv3_skip], dim=1)\n",
+    "        x = self.decConv1(x)\n",
+    "\n",
     "        x = self.trans2(x)\n",
-    "\n",
     "        x = torch.cat([x, conv2_skip], dim=1)\n",
-    "        x = self.trans3(x)\n",
+    "        x = self.decConv2(x)\n",
     "\n",
+    "        x = self.trans3(x)\n",
     "        x = torch.cat([x, conv1_skip], dim=1)\n",
-    "        x = self.trans4(x)\n",
+    "        x = self.decConv3(x)\n",
     "\n",
     "        ### End of your code ###\n",
     "        return x"
@@ -441,7 +436,14 @@
     "\n",
     "    # Perform optimisation and print out the training loss\n",
     "    ### Insert your code ###\n",
-    "    ...\n",
+    "\n",
+    "    loss_pixelwise = criterion(logits, labels)\n",
+    "    loss_segmentation = torch.mean(loss_pixelwise)\n",
+    "    optimizer.zero_grad()\n",
+    "    loss_segmentation.backward()\n",
+    "    optimizer.step()\n",
+    "    print(f\"Training loss for iteration {it}: {loss_segmentation.item()}\")\n",
+    "\n",
     "    ### End of your code ###\n",
     "\n",
     "    # Evaluate\n",
@@ -451,7 +453,16 @@
     "        with torch.no_grad():\n",
     "            # Evaluate on a batch of test images and print out the test loss\n",
     "            ### Insert your code ###\n",
-    "            ...\n",
+    "            \n",
+    "            test_images, test_labels = test_set.get_random_batch(eval_batch_size)\n",
+    "            test_images, test_labels = torch.from_numpy(test_images), torch.from_numpy(test_labels)\n",
+    "            test_images, test_labels = images.to(device, dtype=torch.float32), labels.to(device, dtype=torch.long)\n",
+    "            test_logits = model(test_images)\n",
+    "\n",
+    "            test_loss_pixelwise = criterion(test_logits, test_labels)\n",
+    "            test_loss_segmentation = torch.mean(test_loss_pixelwise)\n",
+    "            print(f\"Test loss for iteration {it}: {test_loss_segmentation.item()}\")\n",
+    "\n",
     "            ### End of your code ###\n",
     "\n",
     "    # Save the model\n",
@@ -480,7 +491,32 @@
    "execution_count": null,
    "source": [
     "### Insert your code ###\n",
-    "...\n",
+    "\n",
+    "# Model setup\n",
+    "model_path = \"./saved_models/model_....pt\"\n",
+    "model = UNet()\n",
+    "model.load_state_dict(torch.load(model_path))\n",
+    "model.eval()\n",
+    "\n",
+    "# Randomly select 4 test images\n",
+    "path = \"./Task01_BrainTumour_2D/test_images/\"\n",
+    "test_imgs = os.listdir(path)\n",
+    "sample_imgs = random.sample(test_imgs, 4)\n",
+    "\n",
+    "# Evaluate on test set\n",
+    "\n",
+    "\n",
+    "fig, axs = plt.subplots(4, 3, figsize=(8, 8))\n",
+    "\n",
+    "for i in range(4):\n",
+    "  t_image = imageio.v2.imread(os.path.join(\"./Task01_BrainTumour_2D/training_images/\", sample_imgs[i]))\n",
+    "  t_label = imageio.v2.imread(os.path.join(\"./Task01_BrainTumour_2D/training_labels/\", sample_imgs[i]))\n",
+    "\n",
+    "  axs[i,0].imshow(t_image, cmap=\"gray\")\n",
+    "  axs[i,2].imshow(t_label, cmap=colors.ListedColormap([\"black\", \"green\", \"blue\", \"red\"]))\n",
+    "\n",
+    "plt.tight_layout()\n",
+    "\n",
     "### End of your code ###"
    ],
    "outputs": [],
