--- a/coursework_02/coursework_02.ipynb
+++ b/coursework_02/coursework_02.ipynb
@@ -437,12 +437,15 @@
     "    # Perform optimisation and print out the training loss\n",
     "    ### Insert your code ###\n",
     "\n",
-    "    loss_pixelwise = criterion(logits, labels)\n",
-    "    loss_segmentation = torch.mean(loss_pixelwise)\n",
+    "    # Perform backpropagation and optimisation\n",
+    "    loss_segmentation = criterion(logits, labels)\n",
     "    optimizer.zero_grad()\n",
     "    loss_segmentation.backward()\n",
     "    optimizer.step()\n",
-    "    print(f\"Training loss for iteration {it}: {loss_segmentation.item()}\")\n",
+    "\n",
+    "    # Print training loss every 100 iterations / epochs\n",
+    "    if it % 100 == 0:\n",
+    "      print(f\"Iteration [{it}], Training Loss: {loss_segmentation.item()}\")\n",
     "\n",
     "    ### End of your code ###\n",
     "\n",
@@ -459,9 +462,8 @@
     "            test_images, test_labels = images.to(device, dtype=torch.float32), labels.to(device, dtype=torch.long)\n",
     "            test_logits = model(test_images)\n",
     "\n",
-    "            test_loss_pixelwise = criterion(test_logits, test_labels)\n",
-    "            test_loss_segmentation = torch.mean(test_loss_pixelwise)\n",
-    "            print(f\"Test loss for iteration {it}: {test_loss_segmentation.item()}\")\n",
+    "            test_loss_segmentation = criterion(test_logits, test_labels)\n",
+    "            print(f\"Iteration [{it}], Test Loss: {test_loss_segmentation.item()}\")\n",
     "\n",
     "            ### End of your code ###\n",
     "\n",
