Print training loss every 100 epochs

--- a/coursework_02/coursework_02.ipynb
+++ b/coursework_02/coursework_02.ipynb
@@ -126,6 +126,9 @@
    "source": [
     "### Insert your code ###\n",
     "\n",
+    "IMAGE_CMAP = \"gray\"\n",
+    "SEGMENTATION_CMAP = colors.ListedColormap([\"black\", \"green\", \"blue\", \"red\"])\n",
+    "\n",
     "path = \"./Task01_BrainTumour_2D/training_images/\"\n",
     "training_imgs = os.listdir(path)\n",
     "sample_imgs = random.sample(training_imgs, 4)\n",
@@ -136,8 +139,8 @@
     "  t_image = imageio.v2.imread(os.path.join(\"./Task01_BrainTumour_2D/training_images/\", sample_imgs[i]))\n",
     "  t_label = imageio.v2.imread(os.path.join(\"./Task01_BrainTumour_2D/training_labels/\", sample_imgs[i]))\n",
     "\n",
-    "  axs[0,i].imshow(t_image, cmap=\"gray\")\n",
-    "  axs[1,i].imshow(t_label, cmap=colors.ListedColormap([\"black\", \"green\", \"blue\", \"red\"]))\n",
+    "  axs[0,i].imshow(t_image, cmap=IMAGE_CMAP)\n",
+    "  axs[1,i].imshow(t_label, cmap=SEGMENTATION_CMAP)\n",
     "\n",
     "plt.tight_layout()\n",
     "\n",
@@ -494,25 +497,23 @@
    "source": [
     "### Insert your code ###\n",
     "\n",
-    "# Model setup\n",
-    "model_path = \"./saved_models/model_....pt\"\n",
-    "model = UNet()\n",
-    "model.load_state_dict(torch.load(model_path))\n",
+    "# No need to load from saved model, since we can reuse variables from part 4\n",
+    "# Set model to evaluation mode\n",
     "model.eval()\n",
     "\n",
-    "# Randomly select 4 test images\n",
-    "path = \"./Task01_BrainTumour_2D/test_images/\"\n",
-    "test_imgs = os.listdir(path)\n",
-    "sample_imgs = random.sample(test_imgs, 4)\n",
+    "# Randomly sample 4 test images, from test_set for model training in part 4\n",
+    "test_sample = test_set.get_random_batch(4)\n",
     "\n",
     "# Evaluate on test set\n",
-    "\n",
+    "test_sample = torch.from_numpy(test_sample)\n",
+    "test_sample = images.to(device, dtype=torch.float32)\n",
+    "test_autos = model(test_sample)\n",
     "\n",
     "fig, axs = plt.subplots(4, 3, figsize=(8, 8))\n",
     "\n",
     "for i in range(4):\n",
-    "  t_image = imageio.v2.imread(os.path.join(\"./Task01_BrainTumour_2D/training_images/\", sample_imgs[i]))\n",
-    "  t_label = imageio.v2.imread(os.path.join(\"./Task01_BrainTumour_2D/training_labels/\", sample_imgs[i]))\n",
+    "  t_image = imageio.v2.imread(os.path.join(\"./Task01_BrainTumour_2D/training_images/\", test_sample[i]))\n",
+    "  t_label = imageio.v2.imread(os.path.join(\"./Task01_BrainTumour_2D/training_labels/\", test_sample[i]))\n",
     "\n",
     "  axs[i,0].imshow(t_image, cmap=\"gray\")\n",
     "  axs[i,2].imshow(t_label, cmap=colors.ListedColormap([\"black\", \"green\", \"blue\", \"red\"]))\n",
