Added final output convolution layer

--- a/coursework_02/coursework_02.ipynb
+++ b/coursework_02/coursework_02.ipynb
@@ -337,10 +337,12 @@
     "            nn.Conv2d(n * 2, n, kernel_size=3, padding=1),\n",
     "            nn.BatchNorm2d(n),\n",
     "            nn.ReLU(),\n",
-    "            nn.Conv2d(n, output_channel, kernel_size=3, padding=1),\n",
-    "            nn.BatchNorm2d(output_channel),\n",
+    "            nn.Conv2d(n, n, kernel_size=3, padding=1),\n",
+    "            nn.BatchNorm2d(n),\n",
     "            nn.ReLU()\n",
     "        )\n",
+    "\n",
+    "        self.decConv4 = nn.Conv2d(n, output_channel, kernel_size=1)\n",
     "\n",
     "        ### End of your code ###\n",
     "\n",
@@ -374,6 +376,8 @@
     "        x = self.trans3(x)\n",
     "        x = torch.cat([x, conv1_skip], dim=1)\n",
     "        x = self.decConv3(x)\n",
+    "\n",
+    "        x = self.decConv4(x)\n",
     "\n",
     "        ### End of your code ###\n",
     "        return x"
