Added softmax calculations + answered question 6

--- a/coursework_02/coursework_02.ipynb
+++ b/coursework_02/coursework_02.ipynb
@@ -509,18 +509,26 @@
     "test_sample = test_set.get_random_batch(4)\n",
     "\n",
     "# Evaluate on test set\n",
-    "test_sample = torch.from_numpy(test_sample)\n",
-    "test_sample = images.to(device, dtype=torch.float32)\n",
-    "test_autos = model(test_sample)\n",
+    "with torch.no_grad():\n",
+    "  test_sample = torch.from_numpy(test_sample)\n",
+    "  test_sample = test_sample.to(device, dtype=torch.float32)\n",
+    "  test_segmentation = model(test_sample)\n",
     "\n",
     "fig, axs = plt.subplots(4, 3, figsize=(8, 8))\n",
     "\n",
     "for i in range(4):\n",
-    "  t_image = imageio.v2.imread(os.path.join(\"./Task01_BrainTumour_2D/training_images/\", test_sample[i]))\n",
-    "  t_label = imageio.v2.imread(os.path.join(\"./Task01_BrainTumour_2D/training_labels/\", test_sample[i]))\n",
+    "  t_image = test_sample[i].cpu()\n",
+    "  t_segmentation = test_segmentation[i].cpu()\n",
+    "  t_label = test_labels[i]\n",
     "\n",
-    "  axs[i,0].imshow(t_image, cmap=\"gray\")\n",
-    "  axs[i,2].imshow(t_label, cmap=colors.ListedColormap([\"black\", \"green\", \"blue\", \"red\"]))\n",
+    "  # Apply softmax to each pixel\n",
+    "  probabilities = np.exp(t_segmentation) / np.exp(t_segmentation).sum(axis=0)\n",
+    "  # Determine maximum for each pixel, flattens: 4x120x120 => 120x120\n",
+    "  predicted_classes = np.argmax(probabilities, axis=0)\n",
+    "\n",
+    "  axs[i,0].imshow(t_image[0], cmap=IMAGE_CMAP)\n",
+    "  axs[i,1].imshow(predicted_classes, cmap=SEGMENTATION_CMAP)\n",
+    "  axs[i,2].imshow(t_label, cmap=SEGMENTATION_CMAP)\n",
     "\n",
     "plt.tight_layout()\n",
     "\n",
@@ -541,13 +549,15 @@
    }
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
-   "source": [],
-   "outputs": [],
-   "metadata": {
-    "id": "nVwEtDKIdTRs"
-   }
+   "cell_type": "markdown",
+   "source": [
+    "The trained model is able to identify the instances of tumours fairly accurately, however, as shown in part 5, the model sometimes overlooks some regions of the tumour, or incorrectly identifies non-tumour regions as part of the tumour.\n",
+    "\n",
+    "Some of this inaccuracy could be due to the simplified implementation of the U-Net architecture in the model. While it has allowed for quicker training, this simplified version might not be able to accurately learn features in the images. Therefore, one potential improvement would be to implement a more complex architecture, with more convolutional layers.\n",
+    "\n",
+    "Another improvement involves enriching the training dataset. The current set only comprises a couple thousand images, which may be potentially limiting the accuracy of the trained model. Although using a more extensive dataset will prolong training time, the model's improved accuracy may be a worthwhile tradeoff for deployment in a real clinic."
+   ],
+   "metadata": {}
   }
  ],
  "metadata": {
